Fixed spacing between cards, gap would disappear when page widens

--- a/styles.css
+++ b/styles.css
@@ -247,25 +247,27 @@ button:hover{
 .projects {
     grid-column: 1/3;
     display: grid;
-    grid-template: repeat(3, 300px) / repeat(2, 400px);
-    gap: 50px;
-    margin-left: 1em;
-    margin-top: 1em;
+    grid-template: repeat(3, minmax(300px, 100%)) / repeat(2, minmax(400px, 100%));
+    gap: 4em;
+    margin-left: 2em;
+    margin-top: 2em;
 }
 
 .announcements {
     grid-column: 3 / 4;
 }
 
+
 .card {
 height: 225px;
-min-width: 300px;
+width: 25vw;
 border-left: solid 6px #ea580c;
 background-color: white;
 border-radius:16px;
 position: relative;
 padding-top: 2em;
 padding-left: 1em;
+box-shadow: 2px 2px -2px black;
 }
 
 .card > h2, .card > p {
@@ -283,5 +285,5 @@ padding-left: 1em;
     gap: 1.75em;
     position: absolute;
     top: 13em;
-    left: 13em;
+    right: 4em;
 }
